TRIM IS WORKING

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,4 +26,5 @@
         android:maxSdkVersion="28"
         tools:ignore="ScopedStorage"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
